# ChangeLog for sci-physics/xfoil
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-physics/xfoil/ChangeLog,v 1.6 2007/07/22 06:51:22 dberkholz Exp $

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; xfoil-6.94-r1.ebuild,
  xfoil-6.96.ebuild:
  Drop virtual/x11 references.

*xfoil-6.96 (23 May 2007)

  23 May 2007; Sébastien Fabbro <bicatali@gentoo.org>
  +files/xfoil-6.96-gfortran.patch, metadata.xml, +xfoil-6.96.ebuild:
  Version bump. Revamped ebuild, added map generation, examples use flags. 
  Added patch to compile with gfortran, fixing bug #147033, thanks to 
  Bob Johnson <ke6fis@arrl.net>. Added longdescription in metadata.xml.

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  02 Jul 2006; Luis Medinas <metalgod@gentoo.org> metadata.xml:
  Update metadata to sci-physics.

  02 Jul 2006; Luis Medinas <metalgod@gentoo.org> +metadata.xml,
  +xfoil-6.94-r1.ebuild:
  Moved from sci-misc/xfoil to sci-physics/xfoil.

  29 Jan 2006; Robin H. Johnson <robbat2@gentoo.org> xfoil-6.94-r1.ebuild:
  Modular-X fixes.

  26 Jun 2005; Olivier Fisette <ribosome@gentoo.org> -xfoil-6.94.ebuild,
  xfoil-6.94-r1.ebuild:
  Fixed typo. Removed obsolete version.

  06 May 2005; David Holm <dholm@gentoo.org> xfoil-6.94-r1.ebuild:
  Added to ~ppc.

  02 Feb 2005; Danny van Dyk <kugelfang@gentoo.org> xfoil-6.94-r1.ebuild,
  xfoil-6.94.ebuild:
  Changed to use eclasses "toolchain-funcs" and "fortran" instead of "gcc".

*xfoil-6.94-r1 (27 Dec 2004)

  27 Dec 2004; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +xfoil-6.94-r1.ebuild, +xfoil-6.94.ebuild:
  Moved from app-sci/xfoil to sci-misc/xfoil.

  30 Mar 2004; Donnie Berkholz <spyderous@gentoo.org>; xfoil-6.94-r1.ebuild,
  xfoil-6.94.ebuild:
  Change x11-base/xfree dependency to virtual/x11.

*xfoil-6.94-r1 (03 Feb 2004)

  03 Feb 2004; George Shapovalov <george@gentoo.org> xfoil-6.94-r1.ebuild :