@@ -1,9 +1,0 @@
-MD5 79e1d6bdb445d0e3ba60338e56e3e420 xfoil694.tar.gz 435936
-RMD160 5ff82817444e149f3b062c1049e72faf82f5d696 xfoil694.tar.gz 435936
-SHA256 9120b4bd1378abec7d09709855ea5b3edcfdd7108dc85082b6cfff982bf347f8 xfoil694.tar.gz 435936
-MD5 ffdcc3ad6cf4466dd40c7753b0806177 xfoil_doc.pdf 311472
-RMD160 644ea80bf13b96699aeb6945d79384f5728bad00 xfoil_doc.pdf 311472
-SHA256 aa796cc709e4dedacf4c918500bea77d00fce15e3e4ca1a026199a884dfa6fa6 xfoil_doc.pdf 311472
-MD5 6a3cbfcc2dd6943317d6590a57dcd77f xfoil_doc.ps 304400
-RMD160 e382e278f367cedd623f74d7edbfa09a6beb8fd7 xfoil_doc.ps 304400
-SHA256 43c291ef532be4e849b357e62ff29dfbbbbf398a0ac019fd1cc2484afb070675 xfoil_doc.ps 304400
