@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/xfoil/Attic/xfoil-6.96.ebuild,v 1.2 2007/07/22 06:51:22 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/xfoil/Attic/xfoil-6.96.ebuild,v 1.3 2007/09/27 08:12:16 bicatali Exp $
 
 inherit toolchain-funcs fortran
 
@@ -18,21 +18,19 @@ DEPEND="x11-libs/libX11"
 
 RESTRICT="test"
 
-S=${WORKDIR}/Xfoil
+S="${WORKDIR}/Xfoil"
+
+FORTRAN="gfortran ifc g77"
 
 src_unpack() {
 	unpack ${A}
 	cd "${S}"
-	[ -z "${FFLAGS}" ] && FFLAGS="${CFLAGS}"
 
-	# As defined in toolchain-funcs.eclass
+	sed -e 's/-O3//g' -i plotlib/config.make || die "sed plotlib/config.make failed"
 	echo "CC = $(tc-getCC)" >> plotlib/config.make
-
-	# As defined in fortran.eclass
 	echo "FC = ${FORTRANC}" >> plotlib/config.make
-
 	echo "CFLAGS += ${CFLAGS}" >> plotlib/config.make
-	echo "FFLAGS += ${FFLAGS}" >> plotlib/config.make
+	echo "FFLAGS += ${FFLAGS:--O2}" >> plotlib/config.make
 
 	sed -i \
 		-e "s/^\(FC.*\)/FC = ${FORTRANC}/g" \
@@ -40,10 +38,11 @@ src_unpack() {
 		-e "s/^\(FFLAGS .*\)/FFLAGS = ${FFLAGS}/g" \
 		-e "s/^\(FFLOPT .*\)/FFLOPT = \$(FFLAGS)/g" \
 		-e "s/^\(FFLAGS2 .*\)/FFLAGS2 = \$(FFLAGS)/g" \
-		bin/Makefile orrs/bin/Makefile || die "sed failed"
+		bin/Makefile orrs/bin/Makefile \
+		|| die "sed for flags and compilers failed"
 
 	# fix bug #147033
-	[[ "${FORTRANC}" == "gfortran" ]] && epatch "${FILESDIR}"/${P}-gfortran.patch
+	[[ ${FORTRANC} == gfortran ]] && epatch "${FILESDIR}"/${P}-gfortran.patch
 
 	# make everything double precision
 	sed -i \
@@ -68,9 +67,9 @@ src_compile() {
 src_install() {
 	dobin bin/pplot bin/pxplot bin/xfoil || die "dobin failed"
 	insinto /usr/share/xfoil/orrs
-	doins orrs/osm*.dat
-	dodoc *.txt README
+	doins orrs/osm*.dat || die "orrs data install failed"
+	dodoc *.txt README || die "dodoc failed"
 	insinto /usr/share/doc/${PF}/
-	use examples && doins -r runs
-	use doc && doins "${DISTDIR}"/dataflow.pdf
+	use examples && { doins -r runs || die "examples install failed"; }
+	use doc && { doins "${DISTDIR}"/dataflow.pdf || die "doc install failed"; }
 }
